# zkaleido

./: .gitignore  .justfile  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  audit.toml  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/actions/extract-rust-version/: action.yml
.github/actions/toolchains/: action.yml
.github/workflows/: cron-nightly-rust.yml  cron-zizmor.yml  lint-actions.yml  lint.yml  mutants.yml  prover.yml  prover.yml.disabled  security.yml  toolchains.yml  unit.yml  zizmor.yml
adapters/native/: Cargo.toml
adapters/native/src/: env.rs  host.rs  input.rs  lib.rs  proof.rs
adapters/risc0/: Cargo.toml  build.rs
adapters/risc0/groth16-verifier/: Cargo.toml
adapters/risc0/groth16-verifier/src/: alt_v.rs  lib.rs  sha256.rs  verifier.rs
adapters/risc0/guest/: Cargo.toml
adapters/risc0/guest/src/: env.rs  lib.rs
adapters/risc0/host/: Cargo.toml
adapters/risc0/host/src/: host.rs  input.rs  lib.rs  perf.rs  proof.rs  prover.rs  verifier.rs
adapters/risc0/src/: env.rs  groth16_verifier.rs  host.rs  input.rs  lib.rs  perf.rs  proof.rs  prover.rs  verifier.rs
adapters/sp1/: Cargo.toml  README.md  build.rs
adapters/sp1/groth16-verifier/: Cargo.toml
adapters/sp1/groth16-verifier/src/: arbitrary.rs  borsh.rs  borsh_impl.rs  constants.rs  converter.rs  error.rs  hashes.rs  lib.rs  proof.rs  serde.rs  serde_impl.rs  types.rs  utils.rs  verification.rs  verifier.rs  verify.rs
adapters/sp1/groth16-verifier/src/conversion/: g1.rs  g2.rs  mod.rs
adapters/sp1/groth16-verifier/src/gnark_conversion/: g1.rs  g2.rs  mod.rs  proof.rs  vk.rs
adapters/sp1/groth16-verifier/src/types/: constant.rs  g1.rs  g2.rs  mod.rs  parsed_proof.rs  proof.rs  utils.rs  vk.rs
adapters/sp1/groth16-verifier/src/verification/: mod.rs  sp1.rs
adapters/sp1/guest/: Cargo.toml
adapters/sp1/guest/src/: env.rs  lib.rs
adapters/sp1/host/: Cargo.toml
adapters/sp1/host/src/: config.rs  groth16_verifier.rs  host.rs  input.rs  lib.rs  perf.rs  proof.rs  prover.rs  remote_prover.rs  verifier.rs
adapters/sp1/src/: env.rs  groth16_verifier.rs  host.rs  input.rs  lib.rs  perf.rs  prover.rs  verifier.rs
artifacts/risc0/: Cargo.toml  build.rs
artifacts/risc0/fibonacci/: Cargo.toml
artifacts/risc0/fibonacci-composition/: Cargo.toml
artifacts/risc0/fibonacci-composition/src/: main.rs
artifacts/risc0/fibonacci/src/: main.rs
artifacts/risc0/schnorr-sig-verify/: Cargo.toml
artifacts/risc0/schnorr-sig-verify/src/: main.rs
artifacts/risc0/sha2-chain/: Cargo.toml
artifacts/risc0/sha2-chain/src/: main.rs
artifacts/risc0/templates/: Cargo.toml.tera
artifacts/risc0/templates/src/: main.rs.tera
artifacts/sp1/: .gitignore  Cargo.toml  build.rs
artifacts/sp1/.template/src/: main.rs
artifacts/sp1/fibonacci/: Cargo.toml
artifacts/sp1/fibonacci-composition/: Cargo.toml
artifacts/sp1/fibonacci-composition/src/: main.rs
artifacts/sp1/fibonacci/src/: main.rs
artifacts/sp1/schnorr-sig-verify/: Cargo.toml
artifacts/sp1/schnorr-sig-verify/src/: main.rs
artifacts/sp1/sha2-chain/: Cargo.toml
artifacts/sp1/sha2-chain/src/: main.rs
artifacts/sp1/src/: lib.rs
artifacts/sp1/templates/: Cargo.toml.tera
artifacts/sp1/templates/src/: main.rs.tera
bn-groth16-types/: Cargo.toml
bn-groth16-types/src/: g1.rs  g2.rs  lib.rs  proof.rs  vk.rs
crates/native/src/: host.rs
crates/risc0/src/: env.rs  groth16_verifier.rs  host.rs  lib.rs  perf.rs  verifier.rs
crates/sp1/: Cargo.toml
crates/sp1/src/: env.rs  groth16_verifier.rs  host.rs  lib.rs  perf.rs  proof.rs  verifier.rs
crates/zkvm/src/: env.rs  host.rs  lib.rs  perf.rs  prover.rs
examples/composition/: Cargo.toml
examples/composition/src/: lib.rs
examples/fibonacci/: Cargo.toml
examples/fibonacci-composition/: Cargo.toml
examples/fibonacci-composition/src/: lib.rs  program.rs
examples/fibonacci/src/: lib.rs  program.rs
examples/groth16-verifier/: Cargo.toml
examples/groth16-verifier/src/: lib.rs
examples/groth16-verify/: Cargo.toml
examples/groth16-verify-risc0/: Cargo.toml
examples/groth16-verify-risc0/src/: input.rs  lib.rs  program.rs
examples/groth16-verify-sp1/: Cargo.toml
examples/groth16-verify-sp1/src/: input.rs  lib.rs  program.rs
examples/groth16-verify/src/: input.rs  lib.rs  program.rs
examples/schnorr-sig-verify/: Cargo.toml
examples/schnorr-sig-verify/src/: input.rs  lib.rs  logic.rs  program.rs  prover.rs
examples/sha2-chain/: Cargo.toml
examples/sha2-chain/src/: lib.rs  program.rs
groth16-verifier/: Cargo.toml
groth16-verifier/src/: error.rs  g1.rs  g2.rs  lib.rs  proof.rs  vk.rs
logging/: Cargo.toml
logging/src/: lib.rs  noop.rs
perf/: Cargo.toml
perf/src/: args.rs  format.rs  github.rs  main.rs
perf/src/programs/: fibonacci.rs  mod.rs  schnorr.rs  sha2.rs
runner/: Cargo.toml
runner/src/: args.rs  format.rs  github.rs  lib.rs  main.rs
runner/src/programs/: fibonacci.rs  fibonacci_composition.rs  groth16_verify.rs  groth16_verify_sp1.rs  mod.rs  schnorr.rs  sha2.rs
zkaleido/: Cargo.toml
zkaleido/src/: env.rs  errors.rs  host.rs  input.rs  lib.rs  perf.rs  program.rs  proof.rs  prover.rs  remote_prover.rs  verifier.rs
zkvm/: Cargo.toml
zkvm/src/: proof.rs
