[workspace]
members = [
  "adapters/native",
  "adapters/risc0",
  "adapters/sp1",
  "zkaleido",

  # binaries
  "runner",

  # examples
  "examples/fibonacci-composition",
  "examples/fibonacci",
  "examples/sha2-chain",
  "examples/schnorr-sig-verify",
]

resolver = "2"

[workspace.dependencies]
zkaleido = { path = "zkaleido" }
zkaleido-native-adapter = { path = "adapters/native" }

fibonacci = { path = "examples/fibonacci" }
fibonacci-composition = { path = "examples/fibonacci-composition" }
sha2-chain = { path = "examples/sha2-chain" }
schnorr-sig-verify = { path = "examples/schnorr-sig-verify" }

arbitrary = { version = "1.3.2", features = ["derive"] }
async-trait = "0.1.86"
bincode = "1.3"
borsh = { version = "1.5.0", features = ["derive"] }
cfg-if = "1.0.0"
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
