[package]
name = "zkaleido-bn-groth16-types"
version = "0.1.0"
edition = "2024"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"


[dependencies]
serde.workspace = true
hex.workspace = true
bn.workspace = true
thiserror.workspace = true
