[package]
edition = "2021"
name = "strata-provers-perf"
version = "0.1.0"

[dependencies]
strata-zkvm.workspace = true

# examples
fibonacci = { workspace = true, optional = true }
sha2-chain = { workspace = true, optional = true }
schnorr-sig-verify = { workspace = true, optional = true }

# sp1
strata-sp1-adapter = { path = "../crates/sp1", optional = true }
strata-sp1-artifacts = { path = "../artifacts/sp1", optional = true }

# risc0
strata-risc0-adapter = { path = "../crates/risc0", optional = true }
strata-risc0-artifacts = { path = "../artifacts/risc0", optional = true }

anyhow = "1.0.83"
bincode = "1.3.3"
clap = { version = "4.5.9", features = ["derive"] }
num-format = "0.4.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
sp1-sdk = "4.0.0"
time = "0.3.26"
tokio = { version = "1.39.0", features = ["full"] }

[features]
default = ["sp1-mock", "risc0-mock", "all-programs"]
sp1 = [
  "strata-sp1-adapter/prover",
  "strata-sp1-artifacts",
  "strata-sp1-adapter/perf",
]
sp1-mock = ["sp1", "strata-sp1-adapter/mock", "strata-sp1-artifacts/mock"]
risc0 = [
  "strata-risc0-adapter/prover",
  "strata-risc0-artifacts",
  "strata-risc0-adapter/perf",
]
risc0-mock = ["risc0", "strata-risc0-adapter/mock"]
all-programs = ["fibonacci", "sha2-chain", "schnorr-sig-verify"]

fibonacci = ["dep:fibonacci"]
sha2-chain = ["dep:sha2-chain"]
schnorr-sig-verify = ["dep:schnorr-sig-verify"]
