[package]
edition = "2021"
name = "zkaleido"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
arbitrary.workspace = true
bincode.workspace = true
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true

[features]
default = ["perf"]
perf = []
