[package]
edition = "2024"
name = "zkaleido"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
borsh = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
ssz = { workspace = true, optional = true }
thiserror.workspace = true
async-trait = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true

[features]
default = ["borsh", "serde", "perf"]
arbitrary = ["dep:arbitrary"]
borsh = ["dep:borsh"]
serde = ["dep:serde", "dep:bincode"]
ssz = ["dep:ssz"]
perf = []
remote-prover = ["dep:async-trait"]
