[package]
edition = "2024"
name = "zkaleido-native-adapter"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
zkaleido.workspace = true

async-trait = { workspace = true, optional = true }
bincode.workspace = true
hex = { workspace = true, optional = true }
k256.workspace = true
rand_core.workspace = true
serde.workspace = true

[features]
remote-prover = ["dep:async-trait", "dep:hex", "zkaleido/remote-prover"]
