[package]
edition = "2021"
name = "zkaleido-risc0-adapter"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
zkaleido.workspace = true

bincode.workspace = true
borsh.workspace = true
hex.workspace = true
risc0-zkvm = "1.2"
serde.workspace = true
sha2.workspace = true

[features]
default = []
mock = []
prover = []
perf = ["prover"]
