[package]
edition = "2021"
name = "zkaleido-risc0-adapter"
version = "0.1.0"

[dependencies]
zkaleido.workspace = true

bincode.workspace = true
borsh.workspace = true
hex.workspace = true
risc0-zkvm = "1.2"
serde.workspace = true
sha2.workspace = true

[features]
default = []
mock = []
prover = []
perf = ["prover"]
