[package]
edition = "2021"
name = "zkaleido-sp1-adapter"
version = "0.1.0"

[dependencies]
zkaleido.workspace = true

bincode.workspace = true
borsh.workspace = true
hex.workspace = true
serde.workspace = true
sha2.workspace = true
sp1-sdk = { version = "4.0.0", optional = true }
sp1-verifier = "4.0.0"
sp1-zkvm = { version = "4.0.0", features = ["verify"], optional = true }

[features]
default = []
mock = []
prover = ["sp1-sdk"]
zkvm = ["sp1-zkvm"]
perf = ["sp1-sdk/profiling", "prover"]
