[package]
edition = "2021"
name = "zkaleido-sp1-adapter"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
zkaleido.workspace = true

async-trait = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
borsh = { workspace = true, optional = true }
cfg-if = { workspace = true, optional = true }
hex.workspace = true
serde = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
sp1-sdk = { version = "4.1.0", optional = true }
sp1-verifier = "4.1.0"
sp1-zkvm = { version = "4.1.0", optional = true }
sp1-prover = { version = "4.1.0", optional = true }
sp1-stark = { version = "4.1.0", optional = true }

[features]
default = []
mock = []
prover = ["sp1-sdk", "borsh", "serde", "bincode"]
remote-prover = ["prover", "async-trait"]
zkvm = ["sp1-zkvm", "cfg-if", "serde", "bincode"]
zkvm-verify = ["sp1-zkvm/verify", "sha2"]
perf = ["sp1-sdk/profiling", "sp1-prover", "sp1-stark", "prover"]
