[package]
name = "zkaleido-sp1-artifacts"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "4.0.0"

[build-dependencies]
sp1-build = "4.0.0"
tera = "1.17.0"     # or the latest version
walkdir = "2.3.2"   # for directory traversal
fs_extra = "1.2.0"  # for copying directories, optional

[features]
mock = []
