[package]
name = "zkaleido-sp1-artifacts"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "4.1.0"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "6c5a7f2846cd3610ecd38b1641f0e370fd07ee83" }
sp1-sdk = "4.1.0"
cargo_metadata = "0.19.1"
tera = "1.17.0"
serde_json = "1.0.94"

[features]
mock = []
