[package]
edition = "2021"
name = "strata-sp1-adapter"
version = "0.1.0"

[dependencies]
strata-zkvm.workspace = true

bincode.workspace = true
borsh.workspace = true
hex.workspace = true
serde.workspace = true
sha2 = { workspace = true }
sp1-primitives = "3.3.0"
sp1-sdk = { version = "3.3.0", optional = true }
sp1-verifier = "3.3.0"
sp1-zkvm = { version = "3.0.0", features = ["verify"], optional = true }
tracing.workspace = true

[features]
default = []
mock = []
prover = ["sp1-sdk"]
zkvm = ["sp1-zkvm"]
