[package]
name = "groth16-verify-sp1"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
sp1-verifier = "6.1.0"
zkaleido-sp1-groth16-verifier = { path = "../../adapters/sp1/groth16-verifier" }
zkaleido = { path = "../../zkaleido" }
zkaleido-native-adapter = { path = "../../adapters/native" }
hex.workspace = true
