[package]
name = "schnorr-sig-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
zkaleido = { path = "../../zkvm" }
strata-native-zkvm-adapter = { path = "../../adapters/native" }

k256 = "0.13.4"
rand = { version = "0.8.5", features = [
  "getrandom",
  "std_rng",
], optional = true }
secp256k1 = { version = "0.29.1", features = ["global-context", "std"] }
signature = "2.2.0"

[features]
default = ["rand"]
rand = ["secp256k1/rand-std", "dep:rand"]
