[package]
edition = "2021"
name = "zkaleido-risc0-groth16-verifier"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
serde.workspace = true
risc0-groth16 = "3.0.1"
risc0-binfmt = "3.0.1"
risc0-zkp = "3.0.1"
bytemuck = { version = "1.23", features = ["derive"] }
sha2.workspace = true
thiserror.workspace = true
zkaleido.workspace = true

[dev-dependencies]
hex.workspace = true
risc0-zkvm = "3.0.1"
risc0-circuit-recursion = "4.0.1"
