[package]
edition = "2024"
name = "zkaleido-risc0-host"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
risc0-zkvm = "3.0.5"
risc0-groth16 = { version = "3.0.4", optional = true }
zkaleido.workspace = true

bincode.workspace = true
hex.workspace = true
serde.workspace = true

[features]
perf = ["risc0-zkvm/prove", "dep:risc0-groth16"]
ssz = ["zkaleido/ssz"]
