[package]
edition = "2024"
name = "zkaleido-sp1-groth16-verifier"
version = "0.1.0"

[lints]
workspace = true

[features]
default = ["serde", "borsh"]
serde = ["dep:hex", "dep:serde"]
borsh = ["dep:borsh"]

[dependencies]
blake3 = { version = "1.6.1", default-features = false }
bn = { version = "0.6.0", package = "substrate-bn" }
borsh = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
sha2.workspace = true
thiserror.workspace = true
zkaleido.workspace = true

[dev-dependencies]
serde_json = "1.0.140"
bincode.workspace = true
rand = "0.8.3"
sp1-verifier = "6.1.0"
