[package]
edition = "2024"
name = "zkaleido-sp1-host"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
sp1-sdk = "5.2.1"
sp1-prover = { version = "5.2.1", optional = true }
sp1-stark = { version = "5.2.1", optional = true }
zkaleido.workspace = true

async-trait = { workspace = true, optional = true }
bincode.workspace = true
serde.workspace = true

[features]
default = []
ssz = ["zkaleido/ssz"]
perf = ["sp1-sdk/profiling", "sp1-prover", "sp1-stark"]
remote-prover = ["async-trait", "zkaleido/remote-prover"]
