[package]
edition = "2024"
name = "zkaleido-sp1-host"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
sp1-core-executor = { workspace = true, optional = true }
sp1-sdk = { workspace = true, features = ["blocking", "network"] }
zkaleido.workspace = true

async-trait = { workspace = true, optional = true }
bincode.workspace = true
serde.workspace = true

[features]
default = []
ssz = ["zkaleido/ssz"]
perf = ["sp1-core-executor", "sp1-sdk/profiling"]
remote-prover = ["async-trait", "zkaleido/remote-prover"]
