[package]
edition = "2024"
name = "zkaleido-sp1-host"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
sp1-core-executor.workspace = true
sp1-sdk = { workspace = true, features = ["blocking", "network"] }
sp1-verifier.workspace = true
zkaleido = { workspace = true, features = ["remote-prover"] }

async-trait.workspace = true
bincode.workspace = true
hex.workspace = true
num-bigint.workspace = true
serde.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time"] }

[features]
default = []
ssz = ["zkaleido/ssz"]
perf = ["sp1-sdk/profiling"]
