[package]
name = "guest-risc0-fibonacci"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
fibonacci = { path = "../../../examples/fibonacci" }
zkaleido-risc0-adapter = { path = "../../../adapters/risc0" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }