[package]
edition = "2021"
name = "guest-risc0-schnorr-sig-verify"
version = "0.1.0"

[workspace]

[dependencies]
schnorr-sig-verify = { path = "../../../examples/schnorr-sig-verify" }
strata-risc0-adapter = { path = "../../../crates/risc0" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
