[package]
edition = "2021"
name = "guest-risc0-sha2-chain"
version = "0.1.0"

[workspace]

[dependencies]
sha2-chain = { path = "../../../examples/sha2-chain" }
strata-risc0-adapter = { path = "../../../crates/risc0" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
