[package]
edition = "2021"
name = "guest-sha2-chain"
version = "0.1.0"

[workspace]

[dependencies]
sha2-chain = { path = "../../../examples/sha2-chain" }
strata-sp1-adapter = { path = "../../../crates/sp1", features = ["zkvm"] }

[features]
mock = ["strata-sp1-adapter/mock"]

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
