[package]
edition = "2021"
name = "guest-sha2-chain"
version = "0.1.0"

[workspace]

[dependencies]
sha2-chain = { path = "../../../examples/sha2-chain" }
zkaleido-sp1-adapter = { path = "../../../adapters/sp1", features = ["zkvm"] }
sp1-zkvm = "4.0.0"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
